[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yggcrawl"
version = "0.3.0"
description = "Sovereign index node for the Yggdrasil mesh"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "requests>=2.28",
]

[project.scripts]
yggcrawl = "cli:main_cli"

[tool.setuptools]
py-modules = [
    "cli",
    "config",
    "crawler",
    "indexer",
    "ingest",
    "logger",
    "main",
    "network",
    "peer_sync",
    "sandbox",
    "validator",
]
